# temperature-monitor

./: Cargo.toml  flash
.cargo/: avr-atmega328p.json  config.toml
src/: button.rs  main.rs  util.rs
